k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: webui
          servicePort: 80
      - path: /apis/
        backend:
            serviceName: apis
            servicePort: 80
